--- a/libs/braillify/Cargo.toml
+++ b/libs/braillify/Cargo.toml
@@ -17,6 +17,9 @@ phf = { version = "0.13", features = ["macros"] }
 clap = { version = "4", features = ["derive"], optional = true }
 anyhow = { version = "1", optional = true }
 rustyline = { version = "17", optional = true }
+regex = "1"
+once_cell = "1"
+unicode-normalization = "0.1.20"
 
 [dev-dependencies]
 csv = "1.3.1"
